<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_tarea"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_nombre_tarea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_nombre_tarea2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_la_tarea"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <Spinner
            android:id="@+id/spinner_asignatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_asignaturas"/>

        <Spinner
            android:id="@+id/spinner_estudiante"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_estudiantes"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_nota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_nota21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar"
            android:text="@string/cancelar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registrar"
            android:text="@string/registrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>
</LinearLayout>