<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="12dp"
    android:backgroundTint="@color/cardview_shadow_end_color"
    android:elevation="15dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/txt_tarea_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tarea"
                android:padding="5dp"
                android:textStyle="bold|italic"
                />
            <TextView
                android:id="@+id/txt_tarea_estudiante"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/estudiante"
                android:padding="5dp"
                android:textStyle="bold|italic"
                />
            <TextView
                android:id="@+id/txt_tarea_asignatura"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/asignatura"
                android:padding="5dp"
                android:textStyle="bold|italic"
                />
            <TextView
                android:id="@+id/txt_tarea_nota"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nota"
                android:padding="5dp"
                android:textStyle="bold|italic"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="6dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp"
                android:id="@+id/btn_delete"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                android:id="@+id/btn_edit"/>


        </LinearLayout>



    </LinearLayout>


</android.support.v7.widget.CardView>